# PytestCodecovGithubActions

./: .gitignore  .gitingore  README.md  pyproject.toml  test_Sample.py
.github/workflows/: main.yml
SampleDir/: sample.py  test_sample.py
