[tool.poetry]
name = "PytestCodecovGithubActions"
version = "0.1.0"
description = ""
authors = ["Tatsumi0000 <ti18027@student.miyazaki-u.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"

[tool.poetry.dev-dependencies]
coveralls = "^1.8"
pytest = "^5.2"
pytest-cov = "^2.8"
coverage = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
